<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sprint1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.sprint1.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/navigation_ingredient"
        android:name="com.example.sprint1.ui.ingredient.IngredientFragment"
        android:label="@string/title_ingredient"
        tools:layout="@layout/fragment_ingredient" />

    <fragment
        android:id="@+id/navigation_input"
        android:name="com.example.sprint1.ui.inputmeal.InputMealFragment"
        android:label="@string/title_input"
        tools:layout="@layout/fragment_input" />

        <fragment
            android:id="@+id/navigation_list"
            android:name="com.example.sprint1.ui.shoppinglist.ShoppinglistFragment"
            android:label="@string/title_list"
            tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_personalInformation"
        android:name="com.example.sprint1.ui.PersonalInformation.PersonalInformation"
        android:label="@string/title_personal_information"
        tools:layout="@layout/fragment_personal_information" />

</navigation>